--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,12 @@ spring.profiles.active=local
 
 spring.main.banner-mode= off
 task.template.allowMultipleTasks= false
+#spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.generate-ddl=true
 #spring.flyway.baseline-on-migrate = true
+spring.flyway.locations= classpath:src/main/java/db/migration
+#spring.jpa.defer-datasource-initialization=true
+
+#------------actuator-----------------------
+management.endpoints.web.base-path=/status
+
