--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -7,3 +7,10 @@ spring:
   jpa:
     hibernate:
       ddl-auto: validate
+
+#------actuator-------
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
