--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,4 @@ spring.flyway.locations= classpath:src/main/java/db/migration
 
 #------------actuator-----------------------
 management.endpoints.web.base-path=/status
-
+management.metrics.enable.http=false
